--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -29,7 +29,7 @@ library(mclust)
 
 #Abstract
 
-My research sets out to explore the nutrition of common foods we eat. Not all foods were included, but 41 foods that are commonplace in an American diet were analyzed on a calorie for calorie basis. The data analyzed collectively, as well as looking at macronutrient and micronutrient compositions individually at times. Among the many methods applied were starplots, multidimensional scaling, principal component analysis, and clustering methods. There are many takeaways from the analysis, some of which are included in the report and some not, but a few were more interesting than others. Contrary to my hypothesis, there appears to be no relationship between the macronutrient and micronutrient composition of a food. There was a slight positive relationships among micronutrients, however, as foods high in one micronutrient were more likely to be high in another. Fruits and vegetables were the main sources of vitamins and minerals; dairy products serve as a good source of calcium, but the other food groups offer little nutritional value in this department. Spinach was a truly unique food providing exceptionally high vitamin and mineral values across the board. The food groups that we biologically categorize foods into also do an impressive job at grouping foods that are nutritionally similar. The exceptions are sometimes intuitive, and sometimes not. Particular benefits and disadvantages of certain foods and food groups are highlighted throughout the report.
+This report sets out to explore the nutrition of common foods we eat. Not all foods were included, but 41 foods that are commonplace in an American diet were analyzed on a calorie for calorie basis. The data was analyzed collectively, as well as looking at macronutrient and micronutrient compositions individually at times. Among the many methods applied were starplots, multidimensional scaling, principal component analysis, and clustering methods. There are many takeaways from the analysis, some of which are included in the report and some not, but a few were more interesting than others. Contrary to my hypothesis, there appears to be no relationship between the macronutrient and micronutrient composition of a food. There was a slight positive relationships among micronutrients, however, as foods high in one micronutrient were more likely to be high in another. Fruits and vegetables were the main sources of vitamins and minerals; dairy products serve as a good source of calcium, but the other food groups offer little nutritional value in this department. Spinach was a truly unique food providing exceptionally high vitamin and mineral values across the board. The food groups that we biologically categorize foods into also do an impressive job at grouping foods that are nutritionally similar. The exceptions are sometimes intuitive, and sometimes not. Particular benefits and disadvantages of certain foods and food groups are highlighted throughout the report.
 
 \newpage
 
@@ -76,7 +76,7 @@ data.vm <- data.vals[,c(10:13)]
 
 ```
 
-To understand the nutrients we put into our bodies, I set out to collect data from www.verywellfit.com. I selected 41 different food items (see next section)  in total, and they were chosen because of their commonplace in my personal diet. While you might find some of these foods obscure, I would assume that most of these foods are commonplace in the American diet.  Each food item had a corresponding nutrition label on the website, which is where the data was web scraped from. Originally, the data contained 16 variables for one serving of the food item: Food Item, Food Group, Weight (g), Calories, Total Fat (g), Saturated Fat (g), Cholesterol (mg), Sodium (mg), Total Carbs (g), Sugar (g), Fiber (g), Protein (g), Vitamin A (daily value %), Vitamin C (DV%), Iron (DV%), and Calcium (DV%).  While there are certainly other variables that could be considered for nutritional analysis, these variables are usually considered among the most important, and that is why they are readily available on most nutritional labels.  
+To understand the nutrients we put into our bodies, I set out to collect data from www.verywellfit.com. I selected 41 different food items in total (see next section), and they were chosen because of their commonplace in my personal diet. While you might find some of these foods obscure, I would assume that most of these foods are commonplace in the American diet.  Each food item had a corresponding nutrition label on the website, which is where the data was web scraped from. Originally, the data contained 16 variables for one serving of the food item: Food Item, Food Group, Weight (g), Calories, Total Fat (g), Saturated Fat (g), Cholesterol (mg), Sodium (mg), Total Carbs (g), Sugar (g), Fiber (g), Protein (g), Vitamin A (daily value %), Vitamin C (DV%), Iron (DV%), and Calcium (DV%).  While there are certainly other variables that could be considered for nutritional analysis, these variables are usually considered among the most important, and that is why they are readily available on most nutritional labels.  
 
 Because the data was web scraped from a consistently formatted website, there were little issues with missing or inaccurate data. The only exception to this was that four foods (sweet corn, green beans, onions, and ham) did not contain information on saturated fat. Since I wanted to preserve these data points and column variables, the missing data was imputed. Mean imputation was ruled out because saturated fat content varies quite a bit from food to food, so these values would likely be inaccurate. Rather, because saturated fat content in highly predictable from total fat content, I used deterministic regression imputation to replace the missing values. Total fat and cholesterol were the two predictors used to make linear regression predictions for the saturated fat value. While this has the potential to reduce the variance of saturated fat and possibly inflate the correlation between saturated fat and the predictor variables, I am not concerned with these issues. While other nutrition labels have slight differences of nutrient values of the same food, they are still very close. The imputed values were compared and nearly identical to similar nutrition labels of the same food item. 
 
@@ -219,7 +219,7 @@ There a few observations I want to point out.
 
 The highest correlation was 0.79 between total fat and saturated fat. This shouldn't surprise us, as total fat is composed of saturated and unsaturated fat. However, this point might be used to counter the argument of "not all fat is bad" that you sometimes hear people say.  While this point has merit (unsaturated fats are indeed good for you), it seems like total fat is a good indicator of the level of unhealthy fat. Generally speaking, fat is bad. "Not all fat is bad" doesn't have much application in our dataset, and likely only applies to unique foods that were excluded from this analysis. 
 
-Sugar and fiber, being types of carbs, have decently strong correlation with total carbs (r =0.70, r =0.58, respectively). Protein, being the third macronutrient after fat and carbs, has strong negative correlation with total carbs (r =-0.76). These observations made so far shouldn't be surprising and won't be the focus of the analysis despite some of the largest correlation values. However, it's important to note this relationship with those unfamiliar with macronutrient composition of foods. One could also takeaway to try and eat higher protein foods if they are trying to limit their sugar intake (correlation of sugar and protein is -0.57). 
+Sugar and fiber, being types of carbs, have decently strong correlation with total carbs (r =0.70 and r =0.58, respectively). Protein, being the third macronutrient after fat and carbs, has strong negative correlation with total carbs (r =-0.76). These observations made so far shouldn't be surprising and won't be the focus of the analysis despite some of the largest correlation values. However, it's important to note this relationship with those unfamiliar with macronutrient composition of foods. One could also takeaway to try and eat higher protein foods if they are trying to limit their sugar intake (correlation of sugar and protein is -0.57). 
 
 ```{r scatterplots}
 
@@ -459,8 +459,6 @@ Taking a closer look, spinach, broccoli, green beans, peas, carrots, peppers and
 
 More generally speaking, we might wonder which of these foods are more similar or distinct. One way to address this is through multidimensional scaling. Since I am concerned about the magnitude of their similarities and not just their ranked order, I will use classical multidimensional scaling. To calculate the proximity matrix, I used the Euclidean distances between the rows and the standardized data. The data was projected onto two dimensions. 
 
-**Figure 14**
-
 ```{r mds}
 
 d <- dist(data.scale) # euclidean distances between the rows
@@ -486,6 +484,8 @@ gp <- data$group == "legume/nut"
 text(x[gp],y[gp],labels=data$food.item[gp],col="black")
 legend("bottomright", legend=levels(data$group), pch=16, col=colors)
 ```
+**Figure 14**
+
 
 The first observation is one that we have been seeing: spinach is truly a unique food as it's off in nowhere land by itself. 
 
@@ -493,31 +493,30 @@ It also becomes clear that most of the data is clustered around its own food gro
 
 On the grander scale, there is clear divide down the middle of the graph. Meat, dairy, and nuts are found exclusively to the right, while fruits and vegetables are founds exclusively to the left. Grains find themselves closer to fruits and vegetables, but are more toward the center than any other group. All in all, multidimensional scaling divided the food into clusters that matched much of our preconceived notions of which of these foods are similar and dissimilar. While foods are grouped by biological reasons, such as containing seeds or being the flesch of an animal, their nutrient composition is reflected fairly accurately by these groupings as well. 
 
-To further explore these natural groupings and the possible reasoning, I will resort to a similar approach in principal component analysis. To examine the macronutrient relationship among these foods, I removed the four vitamins and minerals as well as sodium for analysis. Because the macronutrient data are not on relatively similar scales, I will use the correlation matrix instead of the covariance matrix to calculate the principal components. The data was plotted on the first two principal components, with the first component accounting for 50% of the variance and the second component accounting for an additional 18%. 
+To further explore these natural groupings and the possible reasoning, I will resort to a similar approach in principal component analysis. To examine the macronutrient relationship among these foods, I removed the four vitamins and minerals as well as sodium for analysis. Because the macronutrient data are not on relatively similar scales, I will use the correlation matrix instead of the covariance matrix to calculate the principal components. The data was plotted on the first two principal components, with the first component accounting for 52% of the variance and the second component accounting for an additional 18%. 
 
-**Sodium isn't included, but not included as miconutrient in previous sections**
-
-**Table 1**
 
 ```{r pca macronutrients}
 data.macro <- data.vals[,c(2:6,8,9)]
 pca <- princomp(data.macro, cor = TRUE) # correlation matrix used, so data is on same scale
 summary(pca)
 ```
-**Table 2**
+**Table 1**
+
 
 ```{r pca loading}
 print(pca$loadings)
 ```
+**Table 2**
 
-**Figure 15**
+
 
 ```{r pca macro graph}
 colors <- c("blue","purple","brown","black","red","darkgreen")
 
 PC1scores <- pca$scores[,1]
 PC2scores <- pca$scores[,2]
-plot(PC1scores,PC2scores, xlab = "PC 1 (50%)", ylab = "PC 2 (18%)", main="PCA of Macronutrients", type = "n")
+plot(PC1scores,PC2scores, xlab = "PC 1 (52%)", ylab = "PC 2 (18%)", main="PCA of Macronutrients", type = "n")
 gp <- data$group == "vegetable"
 text(PC1scores[gp],PC2scores[gp],labels=data$food.item[gp],col="darkgreen")
 gp <- data$group == "fruit"
@@ -532,14 +531,13 @@ gp <- data$group == "legume/nut"
 text(PC1scores[gp],PC2scores[gp],labels=data$food.item[gp],col="black")
 legend("bottomright", legend=levels(data$group), pch=16, col=colors)
 
-
 ```
+**Figure 15**
 
 This graph shows a lot of the same patterns that the multidimensional scaling plot showed us, so I will not repeat them. After removing vitamins and minerals, however, we notice that spinach is no longer seen as an extreme outlier. From examining the PCA loadings (Table 2) of the first component, there's some insight as to why there is a clear division between meat, dairy, and nuts versus fruits, vegetables, and grain.  The first component seems to represent the contrast that carbohydrates (total carbs, fiber, sugar) have with fats (total fat, saturated fat, cholesterol) and protein. The second component is also able to distinguish fruit from vegetables fairly effectively. From looking at the loadings and examining the data closer, this is mostly due to the distinct differences in sugar, fiber, and protein. Fruits tend to much higher in sugar content, whereas vegetables are far and away the best source of fiber.  Fruits also have the lowest protein values among all the food groups, while vegetables provide some protein, sometimes in high amounts. For example, you may have heard the dubious saying that "broccoli has more protein than steak", which  relies on a calorie for calorie analysis like ours. While my analysis disproves this notion, broccoli does offer a high value of 24g of protein compared to steak's 40g. 
 
 Turning the analysis back to vitamins and minerals, let's use the same principal component analysis approach on vitamin A, vitamin C, calcium, and iron. The data was plotted on the first two principal components, with the first component accounting for 55% of the variance and the second component accounting for an additional 23%. 
 
-**Table 3**
 
 ```{r pca vitamins and minerals}
 
@@ -547,11 +545,12 @@ Turning the analysis back to vitamins and minerals, let's use the same principal
 pca <- princomp(data.vm,cor=TRUE)
 summary(pca)
 ```
-**Table 4**
+**Table 3**
+
 ```{r pca vit and min loadings}
 print(pca$loadings)
 ```
-**Figure 16**
+**Table 4**
 
 ```{r pca vitamins and minerals graph}
 PC1scores <- pca$scores[,1]
@@ -585,10 +584,11 @@ text(PC1scores[gp],PC2scores[gp],labels=data$food.item[gp],col="black")
 # text(PC1scores[gp],PC2scores[gp],labels=data$food.item[gp],col="black")
 
 ```
+**Figure 16**
+
 
 From the first component's loading in Table 4, we can tell that values higher on the first axis tend be higher vitamins and minerals. The second axis largely reflects values of vitamin C. Most of the data is clustered around (0,0), with a handful of exceptions. Celery, carrots, spinach, tomatoes, oranges, cauliflower, broccoli, and peppers are separated from the pack because of their high nutritional values. While this plot is able to highlight these exceptionally rich foods, it does a poor job offering nutritional insight on the rest of the data. This is not ideal, because many of these foods do offer key nutrients that can help a healthy diet. To get a better picture of these lower valued foods, the analysis was repeated after removing the eight previously mentioned foods that stood out from the cluster and plotted with a biplot. 
 
-**Table 5**
 
 ```{r pca vitamins and minerals outliers removed}
 
@@ -596,11 +596,12 @@ data.q <- data[-c(6,15, 17, 20, 31, 35, 36, 41),]
 pca <- princomp(data.vm[-c(6,15, 17, 20, 31, 35, 36, 41),], cor=TRUE)
 summary(pca)
 ```
-**Figure 17:** Biplot of vitamins and minerals with outliers removed. 
+**Table 5**
+
 
 ```{r pca v m outliers removed biplot}
 
-biplot(pca,xlabs=data$food.item[-c(6,15, 17, 20, 31, 35, 36, 41)], xlab = "PC1 (69%)", ylab = "PC2 (23%)")
+biplot(pca,xlabs=data$food.item[-c(6,15, 17, 20, 31, 35, 36, 41)], xlab = "PC1 (43%)", ylab = "PC2 (26%)")
 # PC1scores <- pca$scores[,1]
 # PC2scores <- pca$scores[,2]
 # plot(PC1scores,PC2scores,type = "n")
@@ -617,32 +618,36 @@ biplot(pca,xlabs=data$food.item[-c(6,15, 17, 20, 31, 35, 36, 41)], xlab = "PC1 (
 # gp <- data.q$group == "legume/nut"
 # text(PC1scores[gp],PC2scores[gp],labels=data.q$food.item[gp],col="black")
 ```
+**Figure 17:** Biplot of vitamins and minerals with outliers removed. 
 
-The graph explains 69% of the total variance, with the first component explaining 43% and the second component explaining 23% of the total variance. From examining the PCA loadings depicted on the biplt, this has similar interpretation to the previous plot, as values clustered around the the bottom left have lower nutritional values. However, the second component largely reflects calcium values. Once again, we can see that dairy items serve as a good source of calcium as milk, cheese, cottage cheese, and yogurt all stand apart from the lower cluster. One of the several observations that could me made is that meat and grain products offer little vitamins and minerals. With the exception of rice and bread providing a slight amount of nutrition, the other foods are exceptionally low in these values. Some iron is present, but these foods should be eaten with macronutrient needs in consideration, not for vitamins and minerals. Cucumbers, watermelons, green beans, and peas also separate themselves as the "second tier" of nutrient rich foods. 
+
+The graph explains 69% of the total variance, with the first component explaining 43% and the second component explaining 23% of the total variance. From examining the PCA loadings depicted on the biplot, this has similar interpretation to the previous plot, as values clustered around the the bottom left have lower nutritional values. However, the second component largely reflects calcium values. Once again, we can see that dairy items serve as a good source of calcium as milk, cheese, cottage cheese, and yogurt all stand apart from the lower cluster. One of the several observations that could me made is that meat and grain products offer little vitamins and minerals. With the exception of rice and bread providing a slight amount of nutrition, the other foods are exceptionally low in these values. Some iron is present, but these foods should be eaten with macronutrient needs in consideration, not for vitamins and minerals. Cucumbers, watermelons, green beans, and peas also separate themselves as the "second tier" of nutrient rich foods. 
 
 Let's bring the data back together and see if there any patterns we haven't found with the entire dataset. Using a scree plot to graph the principal components versus the eigenvalues, it appears that three principal components could be reasonable from the elbow in the graph. It's important to note that these three components only account for 66% of the total variation, so they do not tell the entire story. However, because I want to maintain interpretability and the principal components are harder to understand, I don't think it'd be advantageous to examine 7 or 8 components to account for most of the variation. 
 
-**Table 6**
 
 ```{r pca 3 }
 pca <- princomp(data.vals, cor = TRUE) # correlation matrix used, so data is on same scale
 summary(pca)
 ```
-**Table 7:** loadings for first three principal components.
+**Table 6**
+
 
 ```{r pca 3 loadings}
 print(pca$loadings[,1:3])
 
 ```
-**Figure 18**
+**Table 7:** loadings for first three principal components.
+
 
 ```{r pca 3 scree plot}
 eigvals <- pca$sdev^2
 k <- length(eigvals)
 plot(1:k,eigvals,type="b",xlab="Principal Components",ylab=expression(lambda[i]), main = "Scree Plot")
 ```
+**Figure 18**
 
-**Figure 19**
+
 
 ```{r pc1 pc2}
 # PC1 vs PC2 with food category colored
@@ -667,8 +672,9 @@ text(PC1scores[gp],PC2scores[gp],labels=data$food.item[gp],col="black")
 legend("topleft", legend=levels(data$group), pch=16, col=colors)
 
 ```
+**Figure 19**
 
-**Figure 20**
+
 
 ```{r pc1 pc3}
 # PC1 vs PC3 with food category colored
@@ -692,8 +698,9 @@ text(PC1scores[gp],PC3scores[gp],labels=data$food.item[gp],col="black")
 legend("topleft", legend=levels(data$group), pch=16, col=colors)
 
 ```
+**Figure 20**
 
-**Figure 21**
+
 
 ```{r pc2 pc3}
 # PC2 vs PC3 with food category colored
@@ -717,6 +724,8 @@ text(PC2scores[gp],PC3scores[gp],labels=data$food.item[gp],col="black")
 legend("topright", legend=levels(data$group), pch=16, col=colors)
 
 ```
+**Figure 21**
+
 
 The third component in this analysis highlights cauliflower as distinct from the other food items. Upon further analysis, this is likely due to the insanely high sodium values it has. While cauliflower has been noted as an excellent source of vitamin C and also fiber, this may not be the ideal food for someone who needs to watch their sodium intake. Ham is also highlighted as by the third principal component, likely because of its high sodium values as well. 
 
@@ -729,7 +738,6 @@ We've seen from multidimensional scaling and principal component analysis that t
 Initially, I attempted k means clustering analysis by minimizing the the within-group sum of squares over the standardized variables. The scree plot did not indicate a clear choice for k, so values from 3 to 10 were tested to see if they found interesting/insightful clusters. This approach didn't produce useful results, and it was often hard to understand why certain items were being clustered together. I assume this method didn't work well because of its tendency to cluster into shapes of about equal sizes, which is not ideal for this dataset considering there is likely different variances across clusters. 
 
 To address k-means shortcomings, I turned to a model-based clustering approach. BIC was calculated on cluster values from 1 to 8 for the various models. The lowest BIC value was from the "VII" model with 6 clusters. The "VII" model is characterized as having spherical clusters of unequal volume, partly confirming why k-means wasn't satisfactory. The clusters are as displayed in print and also using multidimensional scaling. 
-**Table 8:** Cluster assignments
 
 ```{r model based clustering}
 
@@ -743,8 +751,8 @@ for(i in 1:k){
   print(names[mclass == i])
 }
 ```
+**Table 8:** Cluster assignments
 
-**Figure 22**
 
 ```{r cluster pca}
 
@@ -774,8 +782,10 @@ legend("bottomright", legend=levels(as.factor(mclass)), pch=16, col=colors, titl
 
 
 ```
+**Figure 22**
 
-The cluster confirms some of the previous observations we've made. Cluster 1 contains all of the grain products and includes two vegetables, corn and potatoes, which humans commonly associate with grain. Cluster 5 contains all fruits with the exception of onions, which has been discussed. Tomatoes, cucumber, and black beans abandoned their technical food group as well, and fall in the Cluster 4 with the other vegetables. Surprisingly, eggs fall into this vegetable cluster, too. Cluster 2 is made up of turkey, salmon, and chicken. Under further inspection, these meats have higher protein values and can be categorized as the "lean meats" from their fat content. These foods are ideal for a health enthusiast trying to meet their protein needs, like a bodybuilder. Cluster 3 contains the rest of the meats along with the dairy products, likely due to their similar protein, fat, and cholesterol content. Cluster 6 is able to distinguish the two nuts from the food items, showing that these truly are a unique class of their own in terms of their nutritional composition. 
+
+The cluster confirms some of the previous observations we've made. Cluster 1 contains all of the grain products and includes two vegetables, corn and potatoes, which humans commonly associate with grain. Cluster 5 contains all fruits with the exception of onions, which has been discussed as being nutritionally similar to fruit. Tomatoes, cucumber, and black beans abandoned their technical food group as well, and fall in the Cluster 4 with the other vegetables. Surprisingly, eggs fall into this vegetable cluster, too. Cluster 2 is made up of turkey, salmon, and chicken. Under further inspection, these meats have higher protein values and can be categorized as the "lean meats" from their fat content. These foods are ideal for a health enthusiast trying to meet their protein needs, like a bodybuilder. Cluster 3 contains the rest of the meats along with the dairy products, likely due to their similar protein, fat, and cholesterol content. Cluster 6 is able to distinguish the two nuts from the food items, showing that these truly are a unique class of their own in terms of their nutritional composition. 
 
 The model based clustering approach did a good job of finding meaningful and relevant clusters. The one observation that didn't provide more insight into the data was the classification of the egg in the cluster made up of mostly vegetables. This inspired further analysis, but it was to no avail. I could not come to any logical conclusions of why this food was clustered that way. Hopefully this doesn't keep me up at night. 
 
